--- a/_includes/head.html
+++ b/_includes/head.html
@@ -33,7 +33,7 @@
 <meta name="HandheldFriendly" content="True">
 <meta name="MobileOptimized" content="320">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-
+<meta name="google-site-verification" content="zw7TMFq_zQa7OSBv4Tt7oqrlvN45XpNapPCFpiI0YUw" />
 
     <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700|Open+Sans:400,600,300,800,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="{{ site.url }}/assets/css/vendor/font-awesome.min.css">
