--- a/_includes/head.html
+++ b/_includes/head.html
@@ -34,6 +34,8 @@
 <meta name="MobileOptimized" content="320">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
+<link rel="shortcut icon" href="{{ site.url }}/favicon.ico">
+
 <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700|Open+Sans:400,600,300,800,700' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="{{ site.url }}/assets/css/vendor/font-awesome.min.css">
 <link rel="stylesheet" href="{{ site.url }}/assets/css/vendor/normalize.css">
