--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -193,8 +193,15 @@ html, body, .notepad-post-container, .notepad-post-header {
       @media only screen and (min-width: 70em) {
         .post-template .notepad-post-content > div:not(.notepad-post-title) {
           margin: -10% auto 0; } }
-      .post-template .notepad-post-content > div:not(.notepad-post-title) a, .post-template .notepad-post-content > div:not(.notepad-post-title) code {
-        color: #E5A418 ; }
+      .post-template .notepad-post-content > div:not(.notepad-post-title) a {
+        color: #E5A418; }
+      .post-template .notepad-post-content > div:not(.notepad-post-title) code {
+        color: #fff; }
+      .post-template .notepad-post-content > div:not(.notepad-post-title) pre {
+        padding: 12px;
+        line-height: 28px;
+        background: #8B8B8B;
+      }
       .post-template .notepad-post-content > div:not(.notepad-post-title) ul, .post-template .notepad-post-content > div:not(.notepad-post-title) ol {
         padding-left: 1.25rem;
         font-size: 1.125rem; }
