adding sumome commented for now

--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -10,3 +10,4 @@
     <script>
       $(document).foundation();
     </script>
+    <!-- <script src="//load.sumome.com/" data-sumo-site-id="4f479349ef18012c56328e22c99c6c9bc0240bc001da0f045f2d6f458b917bc5" async></script> -->
